changed the margin-bottom

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main class="main1">
         <section class="home bd-grid" id="home">
             <div class="home_data">
-            <h1 class="home_title">Hello, <br> I am <span class="home_title-color">William Pepple</span><br>I am a <br> Web Developer</h1>
+            <h1 class="home_title">Hello, <br> I am <span class="home_title-color">William Pepple,</span><br>I am a <br> Web Developer</h1>
             <a href="#" class="button"> Contact</a>
         </div>
         <div class="home_social">
