--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <a href="#" class="button"> Contact</a>
         </div>
         <div class="home_social">
-            <a href="#" class="home_social-icon"><i class="bx bxl-linkedin"></i></a>
-            <a href="#" class="home_social-icon"><i class="bx bxl-github"></i></a>
+            <a href="https://ng.linkedin.com/in/william-pepple-71a144142" class="home_social-icon"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://github.com/williampepple1" class="home_social-icon"><i class="bx bxl-github"></i></a>
         </div>
         <div class="home_img">
             <img src="./images/img-2.jpg" alt="" class="myimage">
@@ -106,11 +106,11 @@
 </section>
     </main>
     <footer class="footer">
-        <p class="footer_title1">William</p>
+        <p class="footer_title1">William Pepple</p>
         <div class="footer_social">
-            <a href="#" class="footer_icon" ><i class="bx bxl-facebook"></i></a>
-            <a href="#" class="footer_icon"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="footer_icon"><i class="bx bxl-twitter"></i></a>
+            <a href="https://www.facebook.com/willy.pepple" class="footer_icon" ><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.instagram.com/thewilliampepple/" class="footer_icon"><i class="bx bxl-instagram"></i></a>
+            <a href="https://twitter.com/MrPepz" class="footer_icon"><i class="bx bxl-twitter"></i></a>
             
         </div>
         <p>&#169; 2020 copyright all right reserved</p>
