--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
     <main class="main1">
         <section class="home bd-grid" id="home">
             <div class="home_data">
-            <h1 class="home_title">Hello, <br> I am <span class="home_title-color">William Pepple,</span><br>I am a <br> Web Developer</h1>
-            <a href="#" class="button"> Contact</a>
+            <h1 class="home_title">Hello, <br> I am <span class="home_title-color">William Pepple,</span><br>I am a Web Developer</h1>
+            <!-- <a href="#" class="button"> Contact</a> -->
+            <div class="home_social">
+                <a href="https://ng.linkedin.com/in/william-pepple-71a144142" class="home_social-icon"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://github.com/williampepple1" class="home_social-icon"><i class="bx bxl-github"></i></a>
+                
+            </div>
         </div>
-        <div class="home_social">
-            <a href="https://ng.linkedin.com/in/william-pepple-71a144142" class="home_social-icon"><i class="bx bxl-linkedin"></i></a>
-            <a href="https://github.com/williampepple1" class="home_social-icon"><i class="bx bxl-github"></i></a>
-        </div>
-        <div class="home_img">
-            <img src="./images/img-2.jpg" alt="" class="myimage">
-        </div>
+
         </section>
         <!-- ABOUT -->
 <section class="about section" id="about">
@@ -52,7 +51,7 @@
         </div>
         <div>
             <h2 class="about_subtitle"> I am William</h2>
-            <p class="about_text">I am a website designer/developer</p>
+            <p class="about_text">I am a Front-End Developer interested in Fullstack Development</p>
         </div>
     </div>
 </section>
@@ -62,44 +61,48 @@
     <div class="skills_container bd-grid">
      <div>
             <h2 class="skills_subtitle">Professional Skills</h2>
-            <p class="skills_text">I am skilled in React Js, Vue Js , CSS3, HTML , Javascript </p>
+            <p class="skills_text">I am skilled in React Js, Vue Js , CSS3, HTML , Javascript, Python, Django, Wordpress, MySQL, SQL, MongoDb etc. </p>
     </div>
 </section>
 
 <section class="work section" id="work">
     <h2 class="section-title">Work</h2>
+    <p class="caption mt-5">Click the images below to visit the live site of the builds </p>
     <div class="work_container bd-grid">
     <div class="work_img">
-        <img src="./images/img-4.jpg" alt="">
+      <a href="https://shopify-challenge-git-master-williampepple1.vercel.app/target=" target="_blank"><img src="./images/image-4.jpg" alt=""></a>  
     </div>
     <div class="work_img">
-        <img src="./images/img-6.jpg" alt="">
+      <a href="http://pepstinderclone.netlify.app/" target="_blank"><img src="./images/img-11.jpg" alt=""></a>
     </div>
     <div class="work_img">
-        <img src="./images/img-7.jpg" alt="">
+        <a href="https://foodiepeps.netlify.app/" target="_blank"><img src="./images/img-7.jpg" alt=""></a>
     </div>
     <div class="work_img">
-        <img src="./images/img-8.jpg" alt="">
+      <a href="https://pepsfood.netlify.app/" target="_blank"> <img src="./images/img-8.jpg" alt=""></a> 
     </div>
     <div class="work_img">
-        <img src="./images/img-10.jpg" alt="">
+      <a href="https://youtube-app-williampepple1.vercel.app/" target="_blank"><img href="" src="./images/img-10.jpg" alt=""></a> 
     </div>
     <div class="work_img">
-        <img src="./images/img-11.jpg" alt="">
+       <a href="https://lagos-tour.vercel.app/" target="_blank"> <img src="./images/image-1.jpg" alt=""></a>  
     </div>
+    <div class="work_img">
+        <a href="https://peps-trivia-app.vercel.app/" target="_blank"> <img src="./images/image-3.jpg" alt=""></a>  
+     </div>
+     <div class="work_img">
+        <a href="https://peps-trivia-app.vercel.app/" target="_blank"> <img src="./images/image-2.jpg" alt=""></a>  
+     </div>
 </div>
 
-<section class="contact section" id="contact">
+<section class="contact work about section" id="contact">
 
     <h2 class="section-title">Contact</h2>
-    <div class="class_container bd-grid">
-        <form action="" class="contact_form">
-            <input type="text" placeholder="Name" class="contact_input">
-            <input type="mail" placeholder="Email" class="contact_input">
-            <textarea name="" id="" cols="0" rows="10" class="contact_input"></textarea>
-
-            <input type="button" value="Enter" class="contact_button button">
-        </form>
+    <div class="class_container section bd-grid">
+    <p>
+        <a href="mailto:williampepple1@gmail.com" class="btn btn-primary contact_button">Email Me</a>
+    </p>
+        
 
     </div>
 </section>
