--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <a href="https://peps-trivia-app.vercel.app/" target="_blank"> <img src="./images/image-3.jpg" alt=""></a>  
      </div>
      <div class="work_img">
-        <a href="https://peps-trivia-app.vercel.app/" target="_blank"> <img src="./images/image-2.jpg" alt=""></a>  
+        <a href="http://pepz-foodrecipeapp.vercel.app//" target="_blank"> <img src="./images/image-2.jpg" alt=""></a>  
      </div>
 </div>
 
