--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="skills_container bd-grid">
      <div>
             <h2 class="skills_subtitle">Professional Skills</h2>
-            <p class="skills_text">I am skilled in React Js, Vue Js , CSS3, HTML , Javascript, Python, Django, Wordpress, MySQL, SQL, MongoDb etc. </p>
+            <p class="skills_text">I am skilled in React Js, CSS3, HTML , Javascript, Python, Django, Wordpress, MySQL, SQL, MongoDb etc. </p>
     </div>
 </section>
 
@@ -91,7 +91,10 @@
         <a href="https://peps-trivia-app.vercel.app/" target="_blank"> <img src="./images/image-3.jpg" alt=""></a>  
      </div>
      <div class="work_img">
-        <a href="http://pepz-foodrecipeapp.vercel.app//" target="_blank"> <img src="./images/image-2.jpg" alt=""></a>  
+        <a href="http://pepz-foodrecipeapp.vercel.app/" target="_blank"> <img src="./images/image-2.jpg" alt=""></a>  
+     </div>
+     <div class="work_img">
+        <a href="http://foodpage-ui.vercel.app" target="_blank"> <img src="./images/img-12.jpg" alt=""></a>  
      </div>
 </div>
 
