--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <h2 class="section-title">Contact</h2>
     <div class="class_container section bd-grid">
     <p>
-        <a href="mailto:williampepple1@gmail.com" class="btn btn-primary contact_button">Email Me</a>
+        <a href="mailto:williampepple1@gmail.com" class="btn btn-primary button">Email Me</a>
     </p>
         
 
